2023-04-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mom]: Ensure parent directory of test script exists.

	* mom.am (contrib/mom/examples/tests-mom.sh): Do it.

	Fixes out-of-tree build failure on systems where the
	prerequisites for running mom's test script are unavailable.
	Thanks to Bruno Haible for the report.

2023-06-15

	* om.tmac: Enclose all calls to \D't n' in \Z

2023-03-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mom]: Generate test script even if we'll skip it.

	* examples/test-mom.sh.in: Check availability of required
	pdfinfo(1) and pdfimages(1) commands at test time; skip if they
	aren't present.
	* mom.am [!HAVE_PDFTOOLS]: Generate the test script even if
	these tools aren't available.

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (uninstall_mom): Clean more fastidiously; try to remove
	the configured `pdfdocdir` in the event it is empty, but do not
	fail if it isn't.  (It can be a directory shared with other
	groff components; we don't know in what order the uninstall
	targets will serialize, but the last one run should succeed.)

2023-02-02
	* om.tmac (UNDERSCORE, UNDERSCORE2): Add PREFIX and SUFFIX
	arguments so surrounding punctuation can be protected from
	underscoring.

2023-01-16
	* om.tmac (PRINTSTYLE): Abort with message if nroff is called on
	a document using PRINTSTYLE TYPESET.

	Fixes <https://savannah.gnu.org/bugs/?63581>.  Thanks to Gene
	for the report.

2022-11-16

	* om.tmac (PAPER): Adjust #R_MARGIN to work with papersize.tmac.

2022-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* om.tmac (FORCE_RECTO): Use backslash before newline when
	starting multi-line conditional block.

2022-09-02

	* examples/mom-pdf.mom: Fixes missing parameter to \*[SIZE] at
	line 457.

	* om.tmac: Fixes CODE <anything> not restoring point size
	correctly.  The point size was being stored in a number register
	instead of a string.

	* BUGS: Updated.
